{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 1234,
  "lineage": "e57af5af-246e-0113-d739-25b45a1d39ae",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "stride_flow_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/95f1709b99b9f9d8",
            "arn_suffix": "app/stride-flow-lb/95f1709b99b9f9d8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "stride-flow-lb-577693996.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/95f1709b99b9f9d8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stride-flow-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-00c9e86567bbcaafc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03b32ca99c934f2cd"
              },
              {
                "subnet_id": "subnet-0653a0c36f295a884"
              }
            ],
            "subnets": [
              "subnet-03b32ca99c934f2cd",
              "subnet-0653a0c36f295a884"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0502aefe62d18e16e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/95f1709b99b9f9d8"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.cert",
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:listener/app/stride-flow-lb/95f1709b99b9f9d8/7c98357b54ce6933",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:962765735019:listener/app/stride-flow-lb/95f1709b99b9f9d8/7c98357b54ce6933",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/95f1709b99b9f9d8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:listener/app/stride-flow-lb/95f1709b99b9f9d8/7c98357b54ce6933"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.cert",
            "module.alb.aws_lb.stride_flow_lb",
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:listener/app/stride-flow-lb/95f1709b99b9f9d8/ea745a2691675c15",
            "certificate_arn": "arn:aws:acm:us-east-1:962765735019:certificate/6863b961-7001-48a4-8164-9c8df2da85c8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:targetgroup/stride-flow-target-group/58cb55d45ae44fbe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:962765735019:listener/app/stride-flow-lb/95f1709b99b9f9d8/ea745a2691675c15",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/95f1709b99b9f9d8",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:listener/app/stride-flow-lb/95f1709b99b9f9d8/ea745a2691675c15"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.cert",
            "module.alb.aws_lb.stride_flow_lb",
            "module.alb.aws_lb_target_group.stride_flow_target_group",
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "stride_flow_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:targetgroup/stride-flow-target-group/58cb55d45ae44fbe",
            "arn_suffix": "targetgroup/stride-flow-target-group/58cb55d45ae44fbe",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/up",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:962765735019:targetgroup/stride-flow-target-group/58cb55d45ae44fbe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "stride-flow-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:targetgroup/stride-flow-target-group/58cb55d45ae44fbe"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.cert",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "stride_flow_frontend_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d7405d05f836d0d4",
            "arn": "arn:aws:ec2:us-east-1:962765735019:instance/i-09e530a28f461f440",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "stride-flow-profile",
            "id": "i-09e530a28f461f440",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08bbf4b6aa3c5ff85"
              }
            ],
            "primary_network_interface_id": "eni-08bbf4b6aa3c5ff85",
            "private_dns": "ip-10-0-14-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.14.151",
            "public_dns": "ec2-3-237-239-250.compute-1.amazonaws.com",
            "public_ip": "3.237.239.250",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b723920574df35ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e26f61c1a5b2649",
            "tags": {
              "Name": "stride-flow-frontend-instance"
            },
            "tags_all": {
              "Name": "stride-flow-frontend-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0fdc6071e49c0439d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "i-09e530a28f461f440",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.iam.aws_iam_instance_profile.stride_flow_ecr_profile",
            "module.iam.aws_iam_role.stride_flow_ec2_role",
            "module.rds.aws_db_instance.stride_flow_db_instance",
            "module.rds.aws_db_subnet_group.stride_flow_mysql_db_subnet_group",
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.sg.aws_security_group.stride_flow_backend_sg",
            "module.sg.aws_security_group.stride_flow_frontend_sg",
            "module.sg.aws_security_group.stride_flow_rds_mysql_sg",
            "module.vpc.aws_subnet.stride_flow_frontend_subnet",
            "module.vpc.aws_subnet.stride_flow_private_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "stride_flow_redis_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d7405d05f836d0d4",
            "arn": "arn:aws:ec2:us-east-1:962765735019:instance/i-0a7c6f2c668e8e22c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7c6f2c668e8e22c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-059bd85ac787632a8"
              }
            ],
            "primary_network_interface_id": "eni-059bd85ac787632a8",
            "private_dns": "ip-10-0-13-196.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.13.196",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f1914fbc6b6e84f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b99e6040bc6dc2c4",
            "tags": {
              "Name": "stride-flow-redis-instance"
            },
            "tags_all": {
              "Name": "stride-flow-redis-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f9fe185147d0121e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "i-0a7c6f2c668e8e22c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.rds.aws_db_instance.stride_flow_db_instance",
            "module.rds.aws_db_subnet_group.stride_flow_mysql_db_subnet_group",
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.sg.aws_security_group.stride_flow_backend_sg",
            "module.sg.aws_security_group.stride_flow_rds_mysql_sg",
            "module.sg.aws_security_group.stride_flow_redis_sg",
            "module.vpc.aws_subnet.stride_flow_private_subnet",
            "module.vpc.aws_subnet.stride_flow_redis_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_instance_enpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-0d1f724d32349c596",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1f724d32349c596",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-instance-enpoint-sg",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eic-endpoint-sg"
            },
            "tags_all": {
              "Name": "eic-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-0d1f724d32349c596",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stride_flow_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-00c9e86567bbcaafc",
            "description": "Allow TLS inbound traffic and all outbound traffic for active load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c9e86567bbcaafc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stride_flow_alb_sg",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stride_flow_alb_sg"
            },
            "tags_all": {
              "Name": "stride_flow_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-00c9e86567bbcaafc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stride_flow_backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-0861b18acdc3add81",
            "description": "Port 8080 to be only allowed from active load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0861b18acdc3add81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c9e86567bbcaafc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group for backend",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stride_flow_backend_sg"
            },
            "tags_all": {
              "Name": "stride_flow_backend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-0861b18acdc3add81",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stride_flow_frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-0fdc6071e49c0439d",
            "description": "Port 80, 443 to be directly accessable from the public internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdc6071e49c0439d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group for frontend",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stride-flow-frontend-sg"
            },
            "tags_all": {
              "Name": "stride-flow-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-0fdc6071e49c0439d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stride_flow_rds_mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-0757b3a1768e8b0ce",
            "description": "Allowing Backend EC2 to access rds MYSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0757b3a1768e8b0ce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0861b18acdc3add81"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Security Group for MYSQL RDS",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stride_flow_rds_mysql_sg"
            },
            "tags_all": {
              "Name": "stride_flow_rds_mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-0757b3a1768e8b0ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.sg.aws_security_group.stride_flow_backend_sg",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stride_flow_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-0f9fe185147d0121e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9fe185147d0121e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0861b18acdc3add81"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "stride-flow-redis-sg",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stride-flow-redis-sg"
            },
            "tags_all": {
              "Name": "stride-flow-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-0f9fe185147d0121e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.sg.aws_security_group.stride_flow_backend_sg",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043e505c7dd69ca1e",
            "arn": "arn:aws:ec2:us-east-1:962765735019:elastic-ip/eipalloc-043e505c7dd69ca1e",
            "domain": "vpc",
            "id": "eipalloc-043e505c7dd69ca1e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-197-89-144.compute-1.amazonaws.com",
            "public_ip": "32.197.89.144",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-nat-eip"
            },
            "tags_all": {
              "Name": "stride-flow-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "eipalloc-043e505c7dd69ca1e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stride_flow_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:internet-gateway/igw-019983195a11f688d",
            "id": "igw-019983195a11f688d",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-internet-gateway"
            },
            "tags_all": {
              "Name": "stride-flow-internet-gateway"
            },
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "igw-019983195a11f688d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "stride_flow_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043e505c7dd69ca1e",
            "association_id": "eipassoc-0b02a44714714f0e4",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04ac63e7eb959ffd0",
            "network_interface_id": "eni-07cadc89f7343fe52",
            "private_ip": "10.0.1.59",
            "public_ip": "32.197.89.144",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03b32ca99c934f2cd",
            "tags": {
              "Name": "stride-flow-nat-gateway"
            },
            "tags_all": {
              "Name": "stride-flow-nat-gateway"
            },
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "nat-04ac63e7eb959ffd0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontend_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:route-table/rtb-027cb5bf1b85c16fd",
            "id": "rtb-027cb5bf1b85c16fd",
            "owner_id": "962765735019",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019983195a11f688d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "frontend-route-table"
            },
            "tags_all": {
              "Name": "frontend-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtb-027cb5bf1b85c16fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stride_flow_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:route-table/rtb-0e4bcaf9e0cc2ee51",
            "id": "rtb-0e4bcaf9e0cc2ee51",
            "owner_id": "962765735019",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ac63e7eb959ffd0",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stride-flow-private-route-table"
            },
            "tags_all": {
              "Name": "stride-flow-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtb-0e4bcaf9e0cc2ee51",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stride_flow_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:route-table/rtb-09518e1b3e1f922c5",
            "id": "rtb-09518e1b3e1f922c5",
            "owner_id": "962765735019",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019983195a11f688d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stride-flow-public-route-table"
            },
            "tags_all": {
              "Name": "stride-flow-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtb-09518e1b3e1f922c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stride_flow_redis_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:route-table/rtb-078b106ed65f152ec",
            "id": "rtb-078b106ed65f152ec",
            "owner_id": "962765735019",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ac63e7eb959ffd0",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stride-flow-redis-route-table"
            },
            "tags_all": {
              "Name": "stride-flow-redis-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtb-078b106ed65f152ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef5e2b8e59cd841b",
            "region": "us-east-1",
            "route_table_id": "rtb-027cb5bf1b85c16fd",
            "subnet_id": "subnet-00e26f61c1a5b2649"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-0ef5e2b8e59cd841b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_route_table.frontend_route_table",
            "module.vpc.aws_subnet.stride_flow_frontend_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1080c555c4822f7",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4bcaf9e0cc2ee51",
            "subnet_id": "subnet-0de677380faa061b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-0b1080c555c4822f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_route_table.stride_flow_private_route_table",
            "module.vpc.aws_subnet.stride_flow_private_subnet",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00321b575a88aa9d9",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4bcaf9e0cc2ee51",
            "subnet_id": "subnet-0fd2566df01f1332d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-00321b575a88aa9d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_route_table.stride_flow_private_route_table",
            "module.vpc.aws_subnet.stride_flow_private_subnet",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redis_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b73c578b50f677d",
            "region": "us-east-1",
            "route_table_id": "rtb-078b106ed65f152ec",
            "subnet_id": "subnet-0b99e6040bc6dc2c4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-06b73c578b50f677d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_route_table.stride_flow_redis_route_table",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_subnet.stride_flow_redis_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stride_flow_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06943c4442be97080",
            "region": "us-east-1",
            "route_table_id": "rtb-09518e1b3e1f922c5",
            "subnet_id": "subnet-03b32ca99c934f2cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-06943c4442be97080",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_route_table.stride_flow_public_route_table",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05787dd562e786d86",
            "region": "us-east-1",
            "route_table_id": "rtb-09518e1b3e1f922c5",
            "subnet_id": "subnet-0653a0c36f295a884"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-05787dd562e786d86",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_route_table.stride_flow_public_route_table",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stride_flow_frontend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-00e26f61c1a5b2649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e26f61c1a5b2649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-frontend-subnet"
            },
            "tags_all": {
              "Name": "stride-flow-frontend-subnet"
            },
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-00e26f61c1a5b2649",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stride_flow_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-0de677380faa061b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de677380faa061b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-private-subnet-1"
            },
            "tags_all": {
              "Name": "stride-flow-private-subnet-1"
            },
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-0de677380faa061b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-0fd2566df01f1332d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd2566df01f1332d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-private-subnet-2"
            },
            "tags_all": {
              "Name": "stride-flow-private-subnet-2"
            },
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-0fd2566df01f1332d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stride_flow_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-03b32ca99c934f2cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b32ca99c934f2cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-public-subnet-1"
            },
            "tags_all": {
              "Name": "stride-flow-public-subnet-1"
            },
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-03b32ca99c934f2cd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-0653a0c36f295a884",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0653a0c36f295a884",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-public-subnet-2"
            },
            "tags_all": {
              "Name": "stride-flow-public-subnet-2"
            },
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-0653a0c36f295a884",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stride_flow_redis_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-0b99e6040bc6dc2c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b99e6040bc6dc2c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-redis-subnet"
            },
            "tags_all": {
              "Name": "stride-flow-redis-subnet"
            },
            "vpc_id": "vpc-0502aefe62d18e16e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-0b99e6040bc6dc2c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stride_flow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:vpc/vpc-0502aefe62d18e16e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00cc420b6f3685ac5",
            "default_route_table_id": "rtb-021c9d2fb382f5228",
            "default_security_group_id": "sg-0d57eeb75b5882415",
            "dhcp_options_id": "dopt-0d55437c69818a5e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0502aefe62d18e16e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021c9d2fb382f5228",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-vpc"
            },
            "tags_all": {
              "Name": "stride-flow-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "vpc-0502aefe62d18e16e",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}